# robot_ui_v2

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  arduino_test01.ino  bootstrap.sh  requirements.txt  run_plan.py  server.py  smoke_test.py
docs/: DOOSAN_ROBOT_GUIDE.md  drfl_DRFC_constants_enums.md  drfl_DRFLEx_api.md  drfl_DRFS_structures.md  drfl_examples.md  drfl_motion_primitives.md  troubleshooting.md
lux_drfl_daemon/: CMakeLists.txt  README.md
lux_drfl_daemon/src/: drfl_daemon.cpp
plans/: capture_20260427_180452.json  final_test.json  plan_20260512_145359.json  test_2.json  test_plan.json
ui/: app.js  index.html
